--- a/flexbox2-1.html
+++ b/flexbox2-1.html
@@ -55,7 +55,7 @@ flex: 1; }
 <body>
 <header id="header">
     <h1> Las 7 Maravillas del Mundo Moderno </h1>
-    <p> Fer De Alba </p>
+    <p> Fer De Alba R.</p>
     <p> Wiseline <em> 06/09/2022 </em> </p>
 </header>
 
